test/compile-fail/resolution/pub/in-too-many-supers/top.rhdl
mod a {
    pub(in super::super) struct b {}
}
